# 0_CreateCppProjectFromHelloWorld

./: CMakeLists.txt  LICENSE  Makefile  README.md  hello_world_0_origin  hello_world_1_decoupling  hello_world_2_decoupling  main.cpp
hello/: CMakeLists.txt  hello.cpp  hello.h  hello1.cpp  hello1.h
test/: CMakeLists.txt  test_hello.cpp
tests/: CMakeLists.txt  test_hello.cpp  test_world.cpp
world/: CMakeLists.txt  world.cpp  world.h
